# parallelEdmondsblossom

./: CMakeLists.txt  LICENSE  Main.cpp  README.md  run_benchmarks.sh
dockerfiles/: benchmarking.docker
graphs/RMAT/: gen_graph.sh  plot2.py  plot2_rmat.py  test.sh  test2.sh
graphs/dimacs/: downfiles.sh  download.sh  download_all.txt  plot.py  run_all.txt  run_cpu.txt  run_gpu.txt  run_some.txt
graphs/dimacs/2DDynSims/: download.py  download.txt  run.txt  run_cpu.txt
graphs/dimacs/citations/: download.py  download.txt  run.txt  run_cpu.txt
graphs/dimacs/delauney/: download.py  download.txt  run.txt  run_cpu.txt
graphs/dimacs/kron/: download.py  download.txt  run.txt  run_cpu.txt
graphs/dimacs/rgg/: download.py  download.txt  run.txt  run_cpu.txt
graphs/dimacs/streets/: download.py  download.txt  run.txt  run_cpu.txt
graphs/regular_random/: README.md  generate_random_graph.py  plot2.py  plot2_degree.py  run.txt  run_cpu.txt  test.sh
src/: Blossom.h  DSU.h  DSU2.h  Enums.h  FileReader.h  Frontier.h  Graph.h  Matcher.h  Stack.h  State.h  Statistics.h  ThreadFactory.h  Vertex.h
